2011-04-11  Vsevolod Vlasov  <vsevik@chromium.org>

Reviewed by Pavel Feldman.

        PerformanceTiming returns inconsistent values when timing is null.
        https://bugs.webkit.org/show_bug.cgi?id=58143

        Made PerformanceTiming returned values consistent when there is no timing object.

        * page/PerformanceTiming.cpp:
        (WebCore::PerformanceTiming::domainLookupStart):
        (WebCore::PerformanceTiming::domainLookupEnd):
        (WebCore::PerformanceTiming::connectStart):
        (WebCore::PerformanceTiming::connectEnd):
        (WebCore::PerformanceTiming::requestStart):
        (WebCore::PerformanceTiming::responseStart):
        (WebCore::PerformanceTiming::domLoading):

Canonical link: https://commits.webkit.org/73255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83491 268f45cc-cd09-0410-ab3c-d52691b4dbfc